# helloWorld

./: .editorconfig  .gitmodules  CMakeLists.txt  infocollector.cpp  infocollector.h  main.cpp
cmake/: cmake_uninstall.cmake.in  config.h.in  git_revision.cmake  install.cmake  uninstall.cmake
libhello/: CMakeLists.txt  hello.cpp  hello.h  libhello.cpp  libhello.h
libpluginhelper/: CMakeLists.txt  libpluginhelper.cpp  libpluginhelper.h  libpluginhelper_assert.cpp  libpluginhelper_assert.h  libpluginhelper_string.cpp  libpluginhelper_string.h  libpluginhelper_time.cpp  libpluginhelper_time.h
libplugins/: CMakeLists.txt  libplugins.cpp  libplugins.h  plugin_apis.cpp  plugin_apis.h  plugin_apis_v1.cpp  plugin_apis_v1.h  plugins_manager.cpp  plugins_manager.h
libsysinfo/: CMakeLists.txt  libsysinfo.cpp  libsysinfo.h
misc/golang/: helloWorld.go
plugins/common/: libplugins_api.h  libplugins_events.h  libplugins_types.h  thirdparty_json.h
plugins/libexample/: CMakeLists.txt  libexample.cpp  libexample.h
