CMAKE_MINIMUM_REQUIRED (VERSION 3.5.2)

PROJECT (libhello
    VERSION "0.1.0.0"
)


CONFIGURE_FILE (${CMAKE_SOURCE_DIR}/cmake/config.h.in ${CMAKE_CURRENT_BINARY_DIR}/config.h)


SET (LIBHELLO_OUTPUT_NAME
    "hello"
)


SET (LIBHELLO_SRCS
    hello.cpp
)


SET (LIBHELLO_PUBLIC_HEADERS
    hello.h
)


ADD_LIBRARY (libhello SHARED ${LIBHELLO_SRCS})
SET_TARGET_PROPERTIES (libhello
    PROPERTIES
    OUTPUT_NAME   ${LIBHELLO_OUTPUT_NAME}
    PUBLIC_HEADER ${LIBHELLO_PUBLIC_HEADERS}
    COMPILE_DEFINITIONS LIBHELLO_EXPORTS=1
)


ADD_LIBRARY (libhello-static STATIC ${LIBHELLO_SRCS})
SET_TARGET_PROPERTIES (libhello-static
    PROPERTIES
    OUTPUT_NAME   ${LIBHELLO_OUTPUT_NAME}
    PREFIX        "lib"
    PUBLIC_HEADER ${LIBHELLO_PUBLIC_HEADERS}
    COMPILE_DEFINITIONS LIBHELLO_STATIC=1
)


INSTALL (TARGETS libhello libhello-static 
        LIBRARY DESTINATION lib
        ARCHIVE DESTINATION lib
        PUBLIC_HEADER DESTINATION include
)

