CMAKE_MINIMUM_REQUIRED (VERSION 3.5.2)


STRING (TIMESTAMP PROJECT_BUILD_TIME "%Y-%m-%dT%H:%M:%SZ" UTC)


PROJECT (libhello
    VERSION "0.1.0.0"
)


CONFIGURE_FILE (${CMAKE_SOURCE_DIR}/cmake/config.h.in ${CMAKE_CURRENT_BINARY_DIR}/config.h)


SET (LIBHELLO_OUTPUT_NAME
    "hello"
)


INCLUDE_DIRECTORIES(
    "${PROJECT_SOURCE_DIR}"
    "${PROJECT_BINARY_DIR}"
) 


SET (LIBHELLO_SRCS
    libhello.cpp
)


SET (LIBHELLO_PUBLIC_HEADERS
    libhello.h
)


ADD_LIBRARY (libhello SHARED ${LIBHELLO_SRCS})
SET_TARGET_PROPERTIES (libhello
    PROPERTIES
    OUTPUT_NAME   ${LIBHELLO_OUTPUT_NAME}
    VERSION       ${PROJECT_VERSION}
    SOVERSION     ${PROJECT_VERSION_MAJOR}
    PUBLIC_HEADER ${LIBHELLO_PUBLIC_HEADERS}
    COMPILE_DEFINITIONS LIBHELLO_EXPORTS=1
    CXX_VISIBILITY_PRESET       hidden
    VISIBILITY_INLINES_HIDDEN   1
    POSITION_INDEPENDENT_CODE   ON
)


ADD_LIBRARY (libhello-static STATIC ${LIBHELLO_SRCS})
SET_TARGET_PROPERTIES (libhello-static
    PROPERTIES
    OUTPUT_NAME   ${LIBHELLO_OUTPUT_NAME}
    PREFIX        "lib"
    VERSION       ${PROJECT_VERSION}
    SOVERSION     ${PROJECT_VERSION_MAJOR}
    PUBLIC_HEADER ${LIBHELLO_PUBLIC_HEADERS}
    COMPILE_DEFINITIONS LIBHELLO_STATIC=1
    POSITION_INDEPENDENT_CODE   ON
)


INSTALL (TARGETS libhello libhello-static 
        LIBRARY DESTINATION lib
        ARCHIVE DESTINATION lib
        PUBLIC_HEADER DESTINATION include
)

