CMAKE_MINIMUM_REQUIRED (VERSION 3.5.2)

SET (PLUGIN_NAME_WITHOUT_LIB
    "plugins"
)


SET (PLUGIN_PUBLIC_HEADERS
    libplugins.h
)


LIST (APPEND PLUGIN_PUBLIC_HEADERS ${CMAKE_SOURCE_DIR}/plugins/common/libplugins_api.h)
LIST (APPEND PLUGIN_PUBLIC_HEADERS ${CMAKE_SOURCE_DIR}/plugins/common/libplugins_events.h)
LIST (APPEND PLUGIN_PUBLIC_HEADERS ${CMAKE_SOURCE_DIR}/plugins/common/libplugins_types.h)


SET (PLUGIN_SRCS
    libplugins.cpp
    plugins_manager.cpp
    plugin_apis.cpp
    plugin_apis_v1.cpp
)


SET (PLUGIN_NAME
    lib${PLUGIN_NAME_WITHOUT_LIB}
)


STRING (TOUPPER ${PLUGIN_NAME} PLUGIN_NAME_TOUPPER)
STRING (TIMESTAMP PROJECT_BUILD_TIME "%Y-%m-%dT%H:%M:%SZ" UTC)


PROJECT (${PLUGIN_NAME}
    VERSION "0.1.0.0"
)


CONFIGURE_FILE (${CMAKE_SOURCE_DIR}/cmake/config.h.in ${CMAKE_CURRENT_BINARY_DIR}/config.h)


IF ( enable_libboost )
    SET (Boost_USE_STATIC_LIBS OFF)
    SET (Boost_USE_MULTITHREADED ON)
    SET (Boost_USE_STATIC_RUNTIME OFF)
    FIND_PACKAGE( Boost 1.63 COMPONENTS system filesystem REQUIRED )
    ADD_DEFINITIONS(
        -DENABLE_LIBBOOST
    )
ELSE ()
    MESSAGE ( FATAL_ERROR "libplugins should be using libboost." )
ENDIF ()


ADD_LIBRARY (${PROJECT_NAME} SHARED ${PLUGIN_SRCS})
TARGET_INCLUDE_DIRECTORIES( ${PROJECT_NAME}
    PRIVATE "${PROJECT_SOURCE_DIR}"
    PRIVATE "${PROJECT_BINARY_DIR}"
    PUBLIC  "${CMAKE_SOURCE_DIR}/plugins/common"
    PRIVATE "${CMAKE_SOURCE_DIR}/thirdparty/json/src"
)
TARGET_LINK_LIBRARIES( ${PROJECT_NAME} ${CMAKE_DL_LIBS} )

IF ( enable_libboost )
    TARGET_INCLUDE_DIRECTORIES( ${PROJECT_NAME}
        PRIVATE "${Boost_INCLUDE_DIR}"
    )

    TARGET_LINK_LIBRARIES( ${PROJECT_NAME}
        ${Boost_LIBRARIES}
    )
ENDIF ()

SET_TARGET_PROPERTIES (${PROJECT_NAME}
    PROPERTIES
    OUTPUT_NAME                 ${PLUGIN_NAME_WITHOUT_LIB}
    VERSION                     ${PROJECT_VERSION}
    SOVERSION                   ${PROJECT_VERSION_MAJOR}
    PUBLIC_HEADER               "${PLUGIN_PUBLIC_HEADERS}"
    COMPILE_DEFINITIONS         ${PLUGIN_NAME_TOUPPER}_EXPORTS=1
    CXX_STANDARD                11
    CXX_VISIBILITY_PRESET       hidden
    VISIBILITY_INLINES_HIDDEN   1
    POSITION_INDEPENDENT_CODE   ON
)


ADD_LIBRARY (${PROJECT_NAME}-static STATIC ${PLUGIN_SRCS})
TARGET_INCLUDE_DIRECTORIES( ${PROJECT_NAME}-static
    PRIVATE "${PROJECT_SOURCE_DIR}"
    PRIVATE "${PROJECT_BINARY_DIR}"
    PUBLIC "${CMAKE_SOURCE_DIR}/plugins/common"
    PRIVATE "${CMAKE_SOURCE_DIR}/thirdparty/json/src"
)
TARGET_LINK_LIBRARIES( ${PROJECT_NAME}-static ${CMAKE_DL_LIBS} )

IF ( enable_libboost )
    TARGET_INCLUDE_DIRECTORIES( ${PROJECT_NAME}-static
        PRIVATE "${Boost_INCLUDE_DIR}"
    )

    TARGET_LINK_LIBRARIES( ${PROJECT_NAME}-static
        ${Boost_LIBRARIES}
    )
ENDIF ()

SET_TARGET_PROPERTIES (${PROJECT_NAME}-static
    PROPERTIES
    OUTPUT_NAME                 ${PLUGIN_NAME_WITHOUT_LIB}
    PREFIX                      "lib"
    VERSION                     ${PROJECT_VERSION}
    SOVERSION                   ${PROJECT_VERSION_MAJOR}
    PUBLIC_HEADER               "${PLUGIN_PUBLIC_HEADERS}"
    COMPILE_DEFINITIONS         ${PLUGIN_NAME_TOUPPER}_STATIC=1
    CXX_STANDARD                11
    POSITION_INDEPENDENT_CODE   ON
)


INSTALL (TARGETS ${PROJECT_NAME} ${PROJECT_NAME}-static
        LIBRARY DESTINATION lib
        ARCHIVE DESTINATION lib
        PUBLIC_HEADER DESTINATION include
)

