CMAKE_MINIMUM_REQUIRED (VERSION 3.5.2)

PROJECT (libsysinfo
    VERSION "0.1.0.0"
)


CONFIGURE_FILE (${CMAKE_SOURCE_DIR}/cmake/config.h.in ${CMAKE_CURRENT_BINARY_DIR}/config.h)


SET (LIBSYSINFO_OUTPUT_NAME
    "sysinfo"
)


SET (LIBSYSINFO_SRCS
    libsysinfo.cpp
)


SET (LIBSYSINFO_PUBLIC_HEADERS
    libsysinfo.h
)


ADD_LIBRARY (libsysinfo SHARED ${LIBSYSINFO_SRCS})
SET_TARGET_PROPERTIES (libsysinfo
    PROPERTIES
    OUTPUT_NAME   ${LIBSYSINFO_OUTPUT_NAME}
    PUBLIC_HEADER ${LIBSYSINFO_PUBLIC_HEADERS}
    COMPILE_DEFINITIONS LIBSYSINFO_EXPORTS=1
)


ADD_LIBRARY (libsysinfo-static STATIC ${LIBSYSINFO_SRCS})
SET_TARGET_PROPERTIES (libsysinfo-static
    PROPERTIES
    OUTPUT_NAME   ${LIBSYSINFO_OUTPUT_NAME}
    PREFIX        "lib"
    PUBLIC_HEADER ${LIBSYSINFO_PUBLIC_HEADERS}
    COMPILE_DEFINITIONS LIBSYSINFO_STATIC=1
)

