CMAKE_MINIMUM_REQUIRED (VERSION 3.5.2)


STRING (TIMESTAMP PROJECT_BUILD_TIME "%Y-%m-%dT%H:%M:%SZ" UTC)


PROJECT (libsysinfo
    VERSION "0.1.0.0"
)


CONFIGURE_FILE (${CMAKE_SOURCE_DIR}/cmake/config.h.in ${CMAKE_CURRENT_BINARY_DIR}/config.h)


SET (LIBSYSINFO_OUTPUT_NAME
    "sysinfo"
)


INCLUDE_DIRECTORIES(
    "${PROJECT_SOURCE_DIR}"
    "${PROJECT_BINARY_DIR}"
) 


SET (LIBSYSINFO_SRCS
    libsysinfo.cpp
)


SET (LIBSYSINFO_PUBLIC_HEADERS
    libsysinfo.h
)


ADD_LIBRARY (libsysinfo SHARED ${LIBSYSINFO_SRCS})
SET_TARGET_PROPERTIES (libsysinfo
    PROPERTIES
    OUTPUT_NAME   ${LIBSYSINFO_OUTPUT_NAME}
    VERSION       ${PROJECT_VERSION}
    SOVERSION     ${PROJECT_VERSION_MAJOR}
    PUBLIC_HEADER ${LIBSYSINFO_PUBLIC_HEADERS}
    COMPILE_DEFINITIONS LIBSYSINFO_EXPORTS=1
    CXX_VISIBILITY_PRESET       hidden
    VISIBILITY_INLINES_HIDDEN   1
    POSITION_INDEPENDENT_CODE   ON
)


ADD_LIBRARY (libsysinfo-static STATIC ${LIBSYSINFO_SRCS})
SET_TARGET_PROPERTIES (libsysinfo-static
    PROPERTIES
    OUTPUT_NAME   ${LIBSYSINFO_OUTPUT_NAME}
    PREFIX        "lib"
    VERSION       ${PROJECT_VERSION}
    SOVERSION     ${PROJECT_VERSION_MAJOR}
    PUBLIC_HEADER ${LIBSYSINFO_PUBLIC_HEADERS}
    COMPILE_DEFINITIONS LIBSYSINFO_STATIC=1
    POSITION_INDEPENDENT_CODE   ON
)


INSTALL (TARGETS libsysinfo libsysinfo-static 
        LIBRARY DESTINATION lib
        ARCHIVE DESTINATION lib
        PUBLIC_HEADER DESTINATION include
)

