CMAKE_MINIMUM_REQUIRED (VERSION 3.5.2)

SET (PLUGIN_NAME_WITHOUT_LIB
    "example"
)


SET (PLUGIN_PUBLIC_HEADERS
    libexample.h
)


SET (PLUGIN_SRCS
    libexample.cpp
)


SET (PLUGIN_NAME
    lib${PLUGIN_NAME_WITHOUT_LIB}
)


STRING (TOUPPER ${PLUGIN_NAME} PLUGIN_NAME_TOUPPER)
STRING (TIMESTAMP PROJECT_BUILD_TIME "%Y-%m-%dT%H:%M:%SZ" UTC)


PROJECT (${PLUGIN_NAME}
    VERSION "0.1.0.0"
)


CONFIGURE_FILE (${CMAKE_SOURCE_DIR}/cmake/config.h.in ${CMAKE_CURRENT_BINARY_DIR}/config.h)


ADD_LIBRARY (${PROJECT_NAME} SHARED ${PLUGIN_SRCS})
TARGET_INCLUDE_DIRECTORIES( ${PROJECT_NAME}
    PRIVATE "${PROJECT_SOURCE_DIR}"
    PRIVATE "${PROJECT_BINARY_DIR}"
    PUBLIC "${CMAKE_SOURCE_DIR}/plugins/common"
    PRIVATE "${CMAKE_SOURCE_DIR}/thirdparty/json/src"
) 
TARGET_LINK_LIBRARIES( ${PROJECT_NAME} ${Boost_LIBRARIES} )
SET_TARGET_PROPERTIES (${PROJECT_NAME}
    PROPERTIES
    OUTPUT_NAME                 ${PLUGIN_NAME_WITHOUT_LIB}
    VERSION                     ${PROJECT_VERSION}
    SOVERSION                   ${PROJECT_VERSION_MAJOR}
    PUBLIC_HEADER               "${PLUGIN_PUBLIC_HEADERS}"
    COMPILE_DEFINITIONS         ${PLUGIN_NAME_TOUPPER}_EXPORTS=1
    CXX_STANDARD                11
    CXX_VISIBILITY_PRESET       hidden
    VISIBILITY_INLINES_HIDDEN   1
    POSITION_INDEPENDENT_CODE   ON
)
ADD_DEPENDENCIES( ${PROJECT_NAME} libpluginhelper )


INSTALL (TARGETS ${PROJECT_NAME}
        LIBRARY DESTINATION lib/modules
        PUBLIC_HEADER DESTINATION include
)

